--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -1,4 +1,4 @@
-module(name = "cmake_configure_file", version = "0.1.2")
+module(name = "cmake_configure_file")
 
 bazel_dep(name = "platforms", version = "0.0.10")
 bazel_dep(name = "rules_python", version = "1.0.0")
