ci: remove workflow dispatch
Signed-off-by: wep21 <daisuke.nishimatsu1021@gmail.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,25 +2,6 @@
 name: Release
 
 on:
-  # Can be triggered from the tag.yaml workflow
-  workflow_call:
-    inputs:
-      prerelease:
-        default: true
-        description: Indicator of whether or not this is a prerelease.
-        type: boolean
-      release_prep_command:
-        default: .github/workflows/release_prep.sh
-        description: |
-          Command to run to prepare the release and generate release notes.
-          Release notes are expected to be outputted to stdout.
-        type: string
-      tag_name:
-        description: |
-          The tag which is being released.
-          By default, https://github.com/softprops/action-gh-release will use `github.ref_name`.
-        type: string
-
   # Or, developers can manually push a tag from their clone
   push:
     tags:
@@ -36,23 +17,19 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          ref: ${{ inputs.tag_name }}
+          ref: ${{ github.ref_name }}
 
       - name: Build release artifacts and prepare release notes
         run: |
-          if [ ! -f "${{ inputs.release_prep_command }}" ]; then
-            echo "ERROR: create a ${{ inputs.release_prep_command }} release prep script or configure a different release prep command with the release_prep_command attribute"
-            exit 1
-          fi
-          ${{ inputs.release_prep_command }} ${{ inputs.tag_name || env.GITHUB_REF_NAME }} > release_notes.txt
+          .github/workflows/release_prep.sh ${{ github.ref_name }} > release_notes.txt
 
       - name: Release
         uses: softprops/action-gh-release@v2
         with:
-          prerelease: ${{ inputs.prerelease }}
+          prerelease: true
           # Use GH feature to populate the changelog automatically
           generate_release_notes: true
           body_path: release_notes.txt
           fail_on_unmatched_files: true
           files: cmake_configure_file-*.tar.gz
-          tag_name: ${{ inputs.tag_name }}
+          tag_name: ${{ github.ref_name }}
